--- a/style.css
+++ b/style.css
@@ -292,3 +292,124 @@ p {
     display: none;
 }
 
+@media (max-width: 600px) {
+    h1 {
+        font-size: 4rem;
+    }
+
+    h2 {
+        font-size: 2.5rem;
+    }
+
+    p {
+        font-size: 1rem;
+    }
+
+    .main {
+        height: 100vh;
+        background-size: cover;
+    }
+
+    .banner-image {
+        width: 80%;
+    }
+
+    .balloons-left,
+    .balloons-right {
+        top: 10%;
+        scale: 0.6;
+    }
+
+    .balloon {
+        width: 120px;
+    }
+
+    .balloon-purple {
+        left: 30%;
+        top: 60%;
+        scale: 0.6;
+    }
+
+    .balloon-yellow {
+        left: -20%;
+        top: 80%;
+        scale: 0.6;
+    }
+
+    .star-red {
+        top: 60%;
+        left: 20%;
+    }
+
+    .star-blue {
+        top: 120%;
+        left: 50%;
+    }
+
+    .balloon-cluster {
+        width: 30%;
+        top: -10%;
+        left: -5%;
+    }
+
+    .main-text-sec {
+        width: 90%;
+    }
+
+    .cake-section {
+        height: 120vh;
+    }
+
+    #cake {
+        scale: 0.35;
+        top: 55%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+
+    #flame {
+        scale: 0.35;
+        top: 55%;
+        left: 50%;
+    }
+
+    .light-candle {
+        width: 7rem;
+        height: 2.5rem;
+        font-size: 0.8rem;
+        right: 2%;
+        bottom: 5%;
+    }
+
+    .bd-banner {
+        scale: 0.4;
+        top: 15%;
+    }
+
+    .c-balloon {
+        width: 6rem;
+        top: 22%;
+    }
+
+    .balloon-left {
+        left: 1rem;
+    }
+
+    .balloon-right {
+        right: 1rem;
+    }
+
+    .gift-section {
+        height: 100vh;
+    }
+
+    .gift-img {
+        width: 150px;
+    }
+
+    .unlock-btn {
+        width: 150px;
+        height: 150px;
+        font-size: 1.5rem;
+    }
+}
